--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 90695a2eee
+	base = cf7d77d308
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 90695a2eee
