--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 0955bd5ed2
+	base = a5c6508e0a
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 0955bd5ed2
