--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = d74e9faf31
+	base = 643a7c1eb4
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = d74e9faf31
