--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 5507569940
+	base = 563d055847
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 5507569940
