--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = aa8fc27aa4
+	base = 6b26d8e733
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = aa8fc27aa4
