--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = b86c1798a5
+	base = bfa04e5f71
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = b86c1798a5
