--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 086d90d099
+	base = 926d33d4b6
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 086d90d099
