--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = c3fbf198b2
+	base = cac18e40c6
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = c3fbf198b2
