--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 262442bf0f
+	base = f8c349ffb1
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 262442bf0f
