--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 8a6110cdc9
+	base = 071436d018
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 8a6110cdc9
