--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 08fc78cfd5
+	base = 8e4433fed7
 	trim = position_controllers
-	trimbase = 
+	trimbase = 08fc78cfd5
