--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = aa26f54edc
+	base = 566e0e5f42
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = aa26f54edc
