--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = ff610ff603
+	base = 3143838a5e
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = ff610ff603
