--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = a7bf5e7b32
+	base = 44608cfec6
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = a7bf5e7b32
