--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 7a39784e78
+	base = 4437f0bd23
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 7a39784e78
