--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = e38135115f
+	base = 520ea05ead
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = e38135115f
