--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 42c1287d98
+	base = 17f3478299
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 42c1287d98
