--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 1db95264c8
+	base = 309be95139
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 1db95264c8
