--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = f780bc835c
+	base = 56413a5b6f
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = f780bc835c
