--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = d2e5962b05
+	base = 53ab56a18d
 	trim = pid_controller
-	trimbase = 
+	trimbase = d2e5962b05
