--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = ec2ee40c7b
+	base = 5a17a76519
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = ec2ee40c7b
