--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 7201db1497
+	base = 4c5614faa8
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = 7201db1497
