--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 8b97a541d0
+	base = 4880fc2fab
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 8b97a541d0
