--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = fc842fe1f5
+	base = 98cfada1e3
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = fc842fe1f5
