--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = e4424549d7
+	base = f39cbb8839
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = e4424549d7
