--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 651d89d2fa
+	base = 662440edd5
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 651d89d2fa
