--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 191825e4d8
+	base = 089a18e6b8
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 191825e4d8
