--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 13311a450d
+	base = 3569fd1ace
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 13311a450d
