--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = df0af73f28
+	base = 4377cb6fea
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = df0af73f28
