--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 150f4b033b
+	base = 6c7011e212
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = 150f4b033b
