--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = a42ae3260c
+	base = d7a42b7b52
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = a42ae3260c
