--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = b587e40358
+	base = edf03fc5cc
 	trim = effort_controllers
-	trimbase = 
+	trimbase = b587e40358
