--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 8013b5d3b9
+	base = b9d9ef01df
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 8013b5d3b9
