--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 1571ec372c
+	base = b4953387fe
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 1571ec372c
