--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 1b46451002
+	base = a1411ad051
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 1b46451002
