--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = d9b15211cb
+	base = abe0673a77
 	trim = position_controllers
-	trimbase = 
+	trimbase = d9b15211cb
