--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 3cb3a71759
+	base = fa0548fb48
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = 3cb3a71759
