--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 025ced6933
+	base = c9ddfed9a4
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 025ced6933
