--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 4de64e5dd1
+	base = 5169324776
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 4de64e5dd1
