--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 1b7c46bcfd
+	base = 9b7f57abe7
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 1b7c46bcfd
