--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = d23a6f3ff6
+	base = b49c82cf1f
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = d23a6f3ff6
