--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = dadb593ede
+	base = d6333154a9
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = dadb593ede
