--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 77d04a4033
+	base = fa2336b80a
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 77d04a4033
