--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 8e17eb91b8
-	trim = 
-	trimbase = 
+	base = b47fa1637f
+	trim = gps_sensor_broadcaster
+	trimbase = 8e17eb91b8
