--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = cbd6e1c2ca
+	base = 9e9f9e0a91
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = cbd6e1c2ca
