--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = a257fdf94d
+	base = c5d90adcdf
 	trim = pid_controller
-	trimbase = 
+	trimbase = a257fdf94d
