--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = b23112d1c4
+	base = fb3825da6c
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = b23112d1c4
