--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = a7e85487e0
+	base = 4fb6d5a953
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = a7e85487e0
