--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gps_sensor_broadcaster
-	previous = 
-	base = dc2adc415e
+	previous = dc2adc415e
+	base = 28f9e1c694
 	trim = 
 	trimbase = 
