--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/gps_sensor_broadcaster
-	previous = 
-	base = 1dcf006019
+	previous = 1dcf006019
+	base = 3e804efe20
 	trim = 
 	trimbase = 
