--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gps_sensor_broadcaster
-	previous = 
-	base = b47fa1637f
+	previous = b47fa1637f
+	base = 9cafb5cc2e
 	trim = 
 	trimbase = 
