--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/gps_sensor_broadcaster
-	previous = 
-	base = 7f81282596
+	previous = 7f81282596
+	base = d7acbdf1bf
 	trim = 
 	trimbase = 
