--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = dae03c9984
+	base = ad756fc500
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = dae03c9984
