--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 0622552911
+	base = 33548ebfad
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 0622552911
