--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 0a548a07c3
+	base = 6d67d7b6b9
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 0a548a07c3
