--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = ae94739a2a
+	base = 03197e775e
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = ae94739a2a
