--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 4682c81b0f
+	base = bbb9faa895
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 4682c81b0f
