--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = afba745e5e
+	base = 5fa5b95973
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = afba745e5e
