--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = cba8640e50
+	base = dedd1ff2e5
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = cba8640e50
