--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 13a83a153e
+	base = e7aaf0d6b1
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = 13a83a153e
