--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 7a374a23aa
+	base = c63ede6000
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 7a374a23aa
