--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 76d1f475e6
+	base = a3f9774476
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 76d1f475e6
