--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 53f6b60ce7
+	base = ed3498bfd0
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 53f6b60ce7
