--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = ebd8e9c959
+	base = 0d04d8da18
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = ebd8e9c959
