--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = aa9102bd26
+	base = 0cb0ffe563
 	trim = admittance_controller
-	trimbase = 
+	trimbase = aa9102bd26
