--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 93afb8c9f1
+	base = e38d07bc2a
 	trim = position_controllers
-	trimbase = 
+	trimbase = 93afb8c9f1
