--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 0c3aeb6a55
+	base = c037072974
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = 0c3aeb6a55
