--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 7f25edd526
+	base = 1b1dbd6648
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 7f25edd526
