--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 7c40e23c07
+	base = db63dda64a
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 7c40e23c07
