--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = ae0a161440
+	base = f5092bac08
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = ae0a161440
