--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 6c90281bf3
+	base = 0a4a8324dd
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = 6c90281bf3
