--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 6e473e8fcc
+	base = 4dceb26c1a
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 6e473e8fcc
