--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = ac2a94c5e3
+	base = fd17b68c95
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = ac2a94c5e3
