--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = a70dfdd10b
-	trim = 
-	trimbase = 
+	base = 08d551cd73
+	trim = gps_sensor_broadcaster
+	trimbase = a70dfdd10b
