--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 7738bddf4e
+	base = 00a2ab11d0
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 7738bddf4e
