--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = d09e7ee86e
+	base = 9b900467fa
 	trim = pid_controller
-	trimbase = 
+	trimbase = d09e7ee86e
