--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = 1349dcdb1c
+	base = 24ea2c1ce7
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 1349dcdb1c
