--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 896b0a032c
-	base = d0ba38ff0c
+	base = 9babe607a3
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = d0ba38ff0c
