--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/gps_sensor_broadcaster
-	previous = 
-	base = 08d551cd73
+	previous = 08d551cd73
+	base = c3ce5a37b4
 	trim = 
 	trimbase = 
