--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/gps_sensor_broadcaster
-	previous = 
-	base = 854e3ebe34
+	previous = 854e3ebe34
+	base = e9c9d10814
 	trim = 
 	trimbase = 
