--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/joint_state_controller
-	previous = 
-	base = 7aa6d98f7f
+	previous = 7aa6d98f7f
+	base = fd98f5c904
 	trim = 
 	trimbase = 
