--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = da7fd43dae
+	base = 44bd7fbdb9
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = da7fd43dae
