--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = b825fee8c9
+	base = 97b12bb653
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = b825fee8c9
