--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 185161f75e
+	base = 2649c08c2f
 	trim = position_controllers
-	trimbase = 
+	trimbase = 185161f75e
