--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 66993714ab
+	base = 01bf9db1f6
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 66993714ab
