--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 2951a45ac0
+	base = 6e11ccc0e1
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 2951a45ac0
