--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 79b7d058ab
+	base = 6a9746037f
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = 79b7d058ab
