--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 3ff62710e9
+	base = 9247bb85e1
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 3ff62710e9
