--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 4c5a93e086
+	base = 80fe8a2a31
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 4c5a93e086
