--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 8626e003b4
+	base = d085d7fbfb
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 8626e003b4
