--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 31d6a3e628
+	base = f39ecbc828
 	trim = pid_controller
-	trimbase = 
+	trimbase = 31d6a3e628
