--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = db1e4bed9b
+	base = 5b180dd9a3
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = db1e4bed9b
