--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = c3f078ac01
+	base = 9ae0ff7ae4
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = c3f078ac01
