--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 10416ce93b
+	base = edfa7ff287
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = 10416ce93b
