--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = b9ac2f4d11
+	base = 1523334b41
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = b9ac2f4d11
