--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 545a790021
+	base = a8dc4b9649
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 545a790021
