--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 4e1ec5d5f5
+	base = 4e43eae8c6
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 4e1ec5d5f5
