--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = d928b75c56
+	base = 27e8c36818
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = d928b75c56
