--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = baaf0c33fd
+	base = 9a607c472f
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = baaf0c33fd
