--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = d6617b5c86
+	base = 362c0424a0
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = d6617b5c86
