--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = cdf30c7254
+	base = 6e70fa86c6
 	trim = gps_sensor_broadcaster
-	trimbase = 
+	trimbase = cdf30c7254
