--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 0059800e85
+	base = 92749b204f
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 0059800e85
