--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = e406770a46
+	base = d3e7e23c15
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = e406770a46
