--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 6d568b07cf
+	base = ddc15c8fa7
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 6d568b07cf
