--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = a78b1888bc
+	base = b263f6376f
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = a78b1888bc
