--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d40e4343fb
-	base = 7e3f8a326c
+	base = f0e5c30636
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 7e3f8a326c
