--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/joint_state_controller
-	previous = 
-	base = 54c4f06111
+	previous = 54c4f06111
+	base = 127c7bdb2d
 	trim = 
 	trimbase = 
