--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 63281843bf
+	base = 610dacc720
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 63281843bf
