--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = c126f311b4
+	base = a2d1f08f73
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = c126f311b4
