--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = e5e8a4317b
+	base = 81c258f25e
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = e5e8a4317b
