--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 67f14dfea8
+	base = 84eeb07dfa
 	trim = position_controllers
-	trimbase = 
+	trimbase = 67f14dfea8
