--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = a43608a3c0
+	base = 57b1011b2d
 	trim = effort_controllers
-	trimbase = 
+	trimbase = a43608a3c0
