--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = fa3485d601
+	base = 9f8e1e3f35
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = fa3485d601
