--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = b8773c63de
+	base = 3d5e36fd94
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = b8773c63de
