--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 7a8e008b57
+	base = 151b3a5a92
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 7a8e008b57
