--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 530f8cf0c3
+	base = b115a517a9
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 530f8cf0c3
