--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = a4b04c72c7
+	base = b85cbe0d02
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = a4b04c72c7
