--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = f3b061cc7a
+	base = abf8a4df59
 	trim = pid_controller
-	trimbase = 
+	trimbase = f3b061cc7a
