--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 2ee1ff352d
+	base = 36561e11c2
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 2ee1ff352d
