--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = e96923df6a
+	base = e36d9d5b54
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = e96923df6a
