--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 2adc7cf704
+	base = 1cd254acbf
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = 2adc7cf704
