--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 87d9953291
+	base = 40c2959908
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 87d9953291
