--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 11726f8de6
+	base = 23fccda1c5
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 11726f8de6
