--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 973fe9c397
+	base = 6b8b408c9d
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 973fe9c397
