--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = dd44902b35
+	base = ae0af94aae
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = dd44902b35
