--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = cef4c9da83
+	base = 9e442dacd0
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = cef4c9da83
