--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = ce4646a1dd
+	base = 5224b2d05d
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = ce4646a1dd
