--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 937b881c16
+	base = ab088a736b
 	trim = gps_sensor_broadcaster
-	trimbase = 
+	trimbase = 937b881c16
