--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 3af5ff57b8
+	base = 6082afeab9
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 3af5ff57b8
