--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = a0257f1a4c
+	base = e1e6bb1e43
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = a0257f1a4c
