--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = f16e611930
+	base = e944b43ccf
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = f16e611930
