--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 846142d523
+	base = 1695c13251
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 846142d523
