--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 43acb231ce
-	base = 2c5a4da547
+	base = 25e8a9f6c9
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 2c5a4da547
