--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 3ccb8e9135
+	base = b037698146
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 3ccb8e9135
