--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = f77d1e3d82
+	base = 879e4114af
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = f77d1e3d82
