--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 4ce03f3f3b
+	base = 96b728cabb
 	trim = position_controllers
-	trimbase = 
+	trimbase = 4ce03f3f3b
