--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 94e32b9262
+	base = df6bba621a
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 94e32b9262
