--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 2f3c3e3eae
+	base = 0f112bb972
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 2f3c3e3eae
