--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = c67d8dc9e6
+	base = 6759aff02a
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = c67d8dc9e6
