--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 18c5fa975e
+	base = 17b3026a71
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 18c5fa975e
