--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = e9d1346a20
+	base = fb71fb9829
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = e9d1346a20
