--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 4b64c19c87
+	base = 447c5fdd1c
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 4b64c19c87
