--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 3927eb2b7e
+	base = 5b62aa382f
 	trim = pid_controller
-	trimbase = 
+	trimbase = 3927eb2b7e
