--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 61a79598f3
+	base = d1099c6fd7
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 61a79598f3
