--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 45b5d6c1c4
+	base = 131916de07
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = 45b5d6c1c4
