--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = b41aa000d2
+	base = 894eb2c0dc
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = b41aa000d2
