--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 59f97f15c8
+	base = 684c2ebd2a
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 59f97f15c8
