--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 75fae6c3c6
+	base = fd5ed87064
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 75fae6c3c6
