--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = c0c6c13c09
+	base = c1ec8ef61b
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = c0c6c13c09
