--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = aeed02a85c
+	base = 06a982cc97
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = aeed02a85c
