--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = d48e8c3e66
+	base = 760d11839b
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = d48e8c3e66
