--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 8dc526fa26
+	base = f9e22a1f57
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = 8dc526fa26
