--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 4605f21364
+	base = 717977d9e7
 	trim = gps_sensor_broadcaster
-	trimbase = 
+	trimbase = 4605f21364
