--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 1a07d695f0
+	base = b562e203b6
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 1a07d695f0
