--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 0c373536e1
+	base = 4a25d481d6
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 0c373536e1
