--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = f6ac664f2d
+	base = 867f098b8e
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = f6ac664f2d
