--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 890008cf27
+	base = 4621ea1407
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 890008cf27
