--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38e5b84990
-	base = 57d5ae5bfa
+	base = 130d21528b
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 57d5ae5bfa
