--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = ad983cf6e9
+	base = 9accbb3f8b
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = ad983cf6e9
