--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = ec06a8937e
+	base = 67d0849464
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = ec06a8937e
