--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 6a25a267cb
+	base = 104a98c18b
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 6a25a267cb
