--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 3b3825c644
+	base = f2d377b3a8
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 3b3825c644
