--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = db5e1a96e1
+	base = 8e11f7cadb
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = db5e1a96e1
