--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 15943206b9
+	base = ef05a67349
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 15943206b9
