--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 07fa4605a8
+	base = a4125af3d6
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 07fa4605a8
