--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = a22af2468c
+	base = 832fd1430e
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = a22af2468c
