--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 9805b4c7f4
+	base = 52f9601c30
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 9805b4c7f4
