--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 5bdf497875
+	base = 04849db729
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 5bdf497875
