--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 0877c06c99
+	base = 37f528ea94
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 0877c06c99
