--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 0126c3463b
+	base = 6d9211b442
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 0126c3463b
