--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 7cf4395eca
+	base = 3bbb37dc43
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 7cf4395eca
