--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 99c238ecf6
+	base = b67462beac
 	trim = position_controllers
-	trimbase = 
+	trimbase = 99c238ecf6
