--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 4d000d7ea4
+	base = 5f92e4fd1a
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 4d000d7ea4
