--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 6f48f71314
+	base = 020a0f7307
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 6f48f71314
