--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 9445899b47
+	base = b43dd57627
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 9445899b47
