--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 6145389618
+	base = e1d899d2e0
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = 6145389618
