--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 078fc6d3d1
+	base = 10cd3a9403
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 078fc6d3d1
