--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 9139d325b4
+	base = 436303b194
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 9139d325b4
