--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 501b812da5
+	base = 037898e089
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 501b812da5
