--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = ddc2d10124
+	base = 6b2a2c3b85
 	trim = pid_controller
-	trimbase = 
+	trimbase = ddc2d10124
