--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = 6b4fcb0205
+	base = fd8bd6fba1
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 6b4fcb0205
