--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7e4b3dd5a0
-	base = a2a0089e98
+	base = 26e379a185
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = a2a0089e98
