--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 3c61e4060a
+	base = a6b541b2e2
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 3c61e4060a
