--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 414c85aaaa
+	base = 8740047f36
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 414c85aaaa
