--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = b34d285b11
+	base = b526a14dc6
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = b34d285b11
