--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = bc374c5ce0
+	base = 3c629d1dec
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = bc374c5ce0
