--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 0411f186a9
+	base = f527284004
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 0411f186a9
