--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = a4112445a0
+	base = 6e0b041de6
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = a4112445a0
