--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 7c333a0320
+	base = 06691bce9b
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 7c333a0320
