--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 93bb5ca031
+	base = 62069c326a
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = 93bb5ca031
