--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = e8b919352b
+	base = 7f86617137
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = e8b919352b
