--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 65ffcad77a
+	base = 2520b1e4dc
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 65ffcad77a
