--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 88dc082bd0
+	base = c40aaafc2b
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 88dc082bd0
