--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = fd7e47f9a2
+	base = 4976ded6dd
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = fd7e47f9a2
