--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 333ee111f1
+	base = c0cb010893
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 333ee111f1
