--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 8b2e14cbe9
+	base = 88d09a2d4f
 	trim = position_controllers
-	trimbase = 
+	trimbase = 8b2e14cbe9
