--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 3b4b74b93a
+	base = 3b1c81c785
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = 3b4b74b93a
