--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 8ce9b57504
+	base = 8ed0b78aa1
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 8ce9b57504
