--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 12a8a4f836
+	base = bd5de7a022
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 12a8a4f836
