--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 08aa3dce85
+	base = 97b38b49eb
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 08aa3dce85
