--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = d4bd3297db
+	base = e374fec259
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = d4bd3297db
