--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = a030df1567
+	base = a5eea242fd
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = a030df1567
