--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 82e7eba0fd
+	base = 1296ca9656
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 82e7eba0fd
