--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 8984e1a81d
+	base = adf5c3b80e
 	trim = gps_sensor_broadcaster
-	trimbase = 
+	trimbase = 8984e1a81d
