--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 56430b5bd1
+	base = 936845e373
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 56430b5bd1
