--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = 002150a835
+	base = aeb56ece19
 	trim = pid_controller
-	trimbase = 
+	trimbase = 002150a835
