--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = a3cadf5a93
+	base = 417d01c3b1
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = a3cadf5a93
