--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 52cbe08d59
-	base = d3552c7102
+	base = ff856f87c9
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = d3552c7102
